Horizontal Scroll Fix

--- a/css/style.css
+++ b/css/style.css
@@ -683,7 +683,7 @@ a {
     }
     
     .mimos {
-        width: calc(50vw - 120px);
+        width: calc(50vw - 130px);
         padding-left: 120px;
     }
     
